--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.44.3",
     "fabric": "^6.7.0",
     "framer-motion": "^12.23.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
@@ -36,13 +37,16 @@
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.25",
